c2rust-transpile/tests/snapshots/snapshots__transpile@builtin_object_size.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/builtin_object_size.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(raw_ref_op)]
#[no_mangle]
pub unsafe extern "C" fn test_builtin_object_size() {
    let mut x: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    &raw mut x;
    let mut n: ::core::ffi::c_ulong = (if 1 as ::core::ffi::c_int & 2 == 0 {
        -1isize as ::libc::size_t
    } else {
        0isize as ::libc::size_t
    }) as ::core::ffi::c_ulong;
}
