c2rust-transpile/tests/snapshots/snapshots__transpile@exprs.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/exprs.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(label_break_value, raw_ref_op)]
extern "C" {
    fn puts(str: *const ::core::ffi::c_char) -> ::core::ffi::c_int;
}
pub type ptrdiff_t = isize;
pub type size_t = usize;
#[derive(Clone, Copy, PartialEq, Eq)]
#[repr(transparent)]
pub struct E(pub ::core::ffi::c_uint);
impl E {
    pub const EA: Self = Self(0);
}
pub type int_t = ::core::ffi::c_int;
#[derive(Clone, Copy, PartialEq, Eq)]
#[repr(transparent)]
pub struct C2Rust_Unnamed(pub ::core::ffi::c_uint);
impl C2Rust_Unnamed {
    pub const A: Self = Self(0);
    pub const B: Self = Self(1);
    pub const C: Self = Self(2);
}
unsafe extern "C" fn side_effect() -> ::core::ffi::c_int {
    puts(b"the return of side effect\0".as_ptr() as *const ::core::ffi::c_char);
    return 0 as ::core::ffi::c_int;
}
unsafe extern "C" fn lvalue_side_effect() -> *mut ::core::ffi::c_int {
    puts(b"the return of side effect\0".as_ptr() as *const ::core::ffi::c_char);
    static mut VAL: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    return &raw mut VAL;
}
#[no_mangle]
pub unsafe extern "C" fn unary_without_side_effect() {
    let mut i: ::core::ffi::c_int = 5 as ::core::ffi::c_int;
    i += 1;
    i -= 1;
    i -= 1;
    i += 1;
}
#[no_mangle]
pub unsafe extern "C" fn unary_with_side_effect() {
    let mut arr: [*mut ::core::ffi::c_char; 1] = [::core::ptr::null_mut::<::core::ffi::c_char>()];
    side_effect();
    side_effect();
    side_effect();
    side_effect();
    side_effect();
}
#[no_mangle]
pub unsafe extern "C" fn inc_decl_with_rvalue_side_effect() {
    let mut arr: [::core::ffi::c_int; 1] = [0 as ::core::ffi::c_int];
    arr[side_effect() as usize] += 1;
    arr[side_effect() as usize] -= 1;
    arr[side_effect() as usize] += 1;
    arr[side_effect() as usize] -= 1;
    let c2rust_lvalue_ptr = &raw mut arr[side_effect() as usize];
    *c2rust_lvalue_ptr += 1;
    let mut pre_inc: ::core::ffi::c_int = *c2rust_lvalue_ptr;
    let c2rust_lvalue_ptr_0 = &raw mut arr[side_effect() as usize];
    *c2rust_lvalue_ptr_0 -= 1;
    let mut pre_dec: ::core::ffi::c_int = *c2rust_lvalue_ptr_0;
    let c2rust_lvalue_ptr_1 = &raw mut arr[side_effect() as usize];
    let c2rust_fresh0 = *c2rust_lvalue_ptr_1;
    *c2rust_lvalue_ptr_1 += 1;
    let mut post_inc: ::core::ffi::c_int = c2rust_fresh0;
    let c2rust_lvalue_ptr_2 = &raw mut arr[side_effect() as usize];
    let c2rust_fresh1 = *c2rust_lvalue_ptr_2;
    *c2rust_lvalue_ptr_2 -= 1;
    let mut post_dec: ::core::ffi::c_int = c2rust_fresh1;
}
#[no_mangle]
pub unsafe extern "C" fn inc_decl_with_lvalue_side_effect() {
    *lvalue_side_effect() += 1;
    *lvalue_side_effect() -= 1;
    *lvalue_side_effect() += 1;
    *lvalue_side_effect() -= 1;
    let c2rust_lvalue_ptr = &raw mut *lvalue_side_effect();
    *c2rust_lvalue_ptr += 1;
    let mut pre_inc: ::core::ffi::c_int = *c2rust_lvalue_ptr;
    let c2rust_lvalue_ptr_0 = &raw mut *lvalue_side_effect();
    *c2rust_lvalue_ptr_0 -= 1;
    let mut pre_dec: ::core::ffi::c_int = *c2rust_lvalue_ptr_0;
    let c2rust_lvalue_ptr_1 = &raw mut *lvalue_side_effect();
    let c2rust_fresh2 = *c2rust_lvalue_ptr_1;
    *c2rust_lvalue_ptr_1 += 1;
    let mut post_inc: ::core::ffi::c_int = c2rust_fresh2;
    let c2rust_lvalue_ptr_2 = &raw mut *lvalue_side_effect();
    let c2rust_fresh3 = *c2rust_lvalue_ptr_2;
    *c2rust_lvalue_ptr_2 -= 1;
    let mut post_dec: ::core::ffi::c_int = c2rust_fresh3;
}
#[no_mangle]
pub unsafe extern "C" fn unsigned_compound_desugaring() {
    let mut i: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    let mut u: ::core::ffi::c_uint = 0 as ::core::ffi::c_uint;
    let mut e: E = E::EA;
    e = E(e.0.wrapping_add(u));
    i = (i as ::core::ffi::c_uint).wrapping_add(u) as ::core::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn cast_literals() {
    let mut i: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
    let mut it: int_t = 1 as int_t;
    let mut i_neg: ::core::ffi::c_int = -1 as ::core::ffi::c_int;
    let mut it_neg: int_t = -1 as int_t;
}
#[no_mangle]
pub unsafe extern "C" fn compound_literal() {
    let mut i: ::core::ffi::c_int =
        C2Rust_Unnamed(1 as ::core::ffi::c_int as ::core::ffi::c_uint).0 as ::core::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn statement_expr() {
    '_c2rust_label: {
        puts(b"should execute\0".as_ptr() as *const ::core::ffi::c_char);
        return;
    };
    puts(b"should be unreachable!\0".as_ptr() as *const ::core::ffi::c_char);
}
#[no_mangle]
pub unsafe extern "C" fn pointer_arithmetic() {
    let mut i1: [::core::ffi::c_int; 2] = [0 as ::core::ffi::c_int, 1 as ::core::ffi::c_int];
    let mut i2: [::core::ffi::c_int; 2] = [10 as ::core::ffi::c_int, 11 as ::core::ffi::c_int];
    let mut p1: *mut ::core::ffi::c_int = &raw mut i1 as *mut ::core::ffi::c_int;
    let mut p2: *mut ::core::ffi::c_int = &raw mut i2 as *mut ::core::ffi::c_int;
    let mut diff: ptrdiff_t = p1.offset_from(p2);
    let mut diff_int: ::core::ffi::c_int = p1.offset_from(p2) as ::core::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn assign_result() {
    let mut l: ::core::ffi::c_ulong = 0 as ::core::ffi::c_ulong;
    l = 1 as ::core::ffi::c_ulong;
    let mut s1: size_t = l as size_t;
    l = l.wrapping_add(2 as ::core::ffi::c_ulong);
    let mut s2: size_t = l as size_t;
}
